@@ -35,7 +35,8 @@ def register():
         shipment.ShipmentOutReturn,
         shipment.ShipmentInternal,
         shipment.AssignPartial,
-        shipment.Address,
+        party.Address,
+        party.ContactMechanism,
         period.Period,
         period.Cache,
         product.Template,
