@@ -1,3 +1,4 @@
+* Add delivery usage to contact mechanism
 * Add margin reporting
 * Add products_by_locations Model
 
